<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roakstudio.roomie.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="About Roomie"
        android:layout_marginTop="50dp"
        android:id="@+id/txt_IntroName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/str_intro_info_one"
        android:layout_marginTop="15dp"
        android:layout_below="@id/txt_IntroName"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:id="@+id/txt_IntroLooking"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/str_intro_info_two"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txt_IntroLooking"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textStyle="normal"
        android:textSize="12sp"
        android:text="@string/str_intro_btn_next"
        android:id="@+id/btn_Intro"
        android:onClick="sendMessage"/>


</RelativeLayout>
